--- a/views/environments.hbs
+++ b/views/environments.hbs
@@ -113,7 +113,7 @@ Source URL: https://canvas.oregonstate.edu/courses/1946034/pages/exploration-web
                         <td align="center">
                             <button class="edit-btn"
                                 onclick="populateUpdateForm('{{this.ID}}', '{{this.Name}}', '{{this.Terrain}}', '{{this.Climate}}')">Edit
-                                Type</button>
+                                Environment</button>
                         </td>
                         <td align="center">
                             <button class="delete-btn"
