--- a/public/css/style.css
+++ b/public/css/style.css
@@ -108,6 +108,11 @@ h1 {
     margin: 0 auto;
 }
 
+.abilities-multiple {
+    width: 300px;
+    height: 200px;
+}
+
 table {
     border-collapse: collapse;
     margin: auto;
