--- a/public/css/style.css
+++ b/public/css/style.css
@@ -108,22 +108,59 @@ h1 {
     margin: 0 auto;
 }
 
+.edit-btn,
+.delete-btn {
+    padding: 6px 12px; /* Adjust padding to align buttons */
+    width: auto; /* Remove full width for buttons */
+    margin: 0; /* Reset margin for buttons */
+}
+
 .abilities-multiple {
     width: 300px;
     height: 200px;
 }
 
+#browse {
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
 table {
     border-collapse: collapse;
     margin: auto;
+    table-layout: fixed;
+    width: auto; /* Or you could use a percentage or fixed width, e.g., 80% or 960px */
+    margin: 0 auto; /* This will center the table on the page */
+    max-width: 100%; /* This prevents the table from exceeding the width of its container */
+    overflow-x: auto; /* Allows for horizontal scrolling on smaller screens */
 }
 
 th,
 td {
     border: 1px solid black;
     padding: 10px;
+    word-wrap: break-word;
+    
 }
 
+#dragons-table tbody tr td:nth-child(12) {
+    max-width: 200px; /* Adjust the value as needed */
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    cursor: pointer; /* Change cursor to indicate clickable */
+}
+thead {
+    background-color: #333;
+    color: #fff;
+}
+tbody tr:nth-child(odd) {
+    background-color: #f9f9f9;
+}
+
+tbody tr:nth-child(even) {
+    background-color: #e9e9e9;
+}
 form {
     width: 80%;
     margin: 0 auto;
@@ -134,6 +171,7 @@ label {
     display: block;
     margin-bottom: 10px;
 }
+
 
 input[type="text"],
 input[type="number"],
@@ -172,7 +210,8 @@ input[type="button"] {
 }
 
 button {
-    font-size: 18px;
+    font-size: 14px;
+    white-space: nowrap; 
 }
 
 button:hover {
@@ -202,3 +241,22 @@ input[type="button"]:focus {
     outline: none;
     box-shadow: 0 0 5px #007bff;
 }
+
+#searchBox {
+    width: 100%; /* Example width */
+    padding: 8px; /* Adjust padding as needed */
+    box-sizing: border-box; /* Include padding and border in the element's total width and height */
+}
+
+.faux-option {
+    width: 10%;
+    display: block;
+    padding: 2px;
+    margin: 2px;
+    border: 1px solid #ccc;
+    cursor: pointer;
+}
+.faux-option.selected {
+    background-color: #e9e9e9;
+}
+
